Add SQLite in tests/database

--- a/tests/database.ipynb
+++ b/tests/database.ipynb
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_library = True\n",
-    "#local_library = False\n",
+    "#local_library = True\n",
+    "local_library = False\n",
     "\n",
     "if local_library : \n",
     "    da_tran_SQL = imp.load_source('da_tran_SQL', 'py_topping/data_connection/database.py').da_tran_SQL\n",
@@ -2955,6 +2955,257 @@
     "        result, expect = help_test(df_read.fillna(99), expect_df.fillna(99))\n",
     "        self.assertEqual(result, expect)\n",
     "        \n",
+    "unittest.main(argv = ['first-arg-is-ignored'], exit = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SQLite\n",
+    "## Default SQLite : No Datetime in SQLite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "..."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection OK\n",
+      "Start Filter Existing data from df at  2021-02-14 12:58:00.596790\n",
+      "Dump data to  unit_test_git  End  2021-02-14 12:58:00.615739\n",
+      "Connection OK\n",
+      "Start Filter Existing data from df at  2021-02-14 12:58:00.662168\n",
+      "Dump data to  unit_test_git  End  2021-02-14 12:58:00.675133\n",
+      "Connection OK\n",
+      "Start Filter Existing data from df at  2021-02-14 12:58:00.723006\n",
+      "Dump data to  unit_test_git  End  2021-02-14 12:58:00.737965\n",
+      "Connection OK"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "...."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Connection OK\n",
+      "Start delete old data at 2021-02-14 12:58:00.794816\n",
+      "Delete Last ['col1'] at 2021-02-14 12:58:00.799806\n",
+      "Dump data to  unit_test_git  End  2021-02-14 12:58:00.805808\n",
+      "Connection OK\n",
+      "Start delete old data at 2021-02-14 12:58:00.834711\n",
+      "Delete Last col1 at 2021-02-14 12:58:00.838696\n",
+      "Dump data to  unit_test_git  End  2021-02-14 12:58:00.843683\n",
+      "Connection OK\n",
+      "Start delete old data at 2021-02-14 12:58:00.870619\n",
+      "Delete Last ['col1', 'col2'] at 2021-02-14 12:58:00.874615\n",
+      "Dump data to  unit_test_git  End  2021-02-14 12:58:00.907521\n",
+      "Connection OK\n",
+      "Start delete old data at"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "...."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 2021-02-14 12:58:00.934493\n",
+      "Delete Last ['col1', 'col2', 'col3'] at 2021-02-14 12:58:00.936487\n",
+      "Dump data to  unit_test_git  End  2021-02-14 12:58:00.941472\n",
+      "Connection OK\n",
+      "Start delete old data at 2021-02-14 12:58:00.966411\n",
+      "Delete Last ['col1'] at 2021-02-14 12:58:00.970402\n",
+      "Dump data to  unit_test_git  End  2021-02-14 12:58:00.975388\n",
+      "Connection OK\n",
+      "Start delete old data at 2021-02-14 12:58:01.023296\n",
+      "Delete Last ['col1'] at 2021-02-14 12:58:01.028246\n",
+      "delete from unit_test_git where ([col1] in ('4.0', '5.0', '6.0', '7.0') OR [col1] IS NULL)\n",
+      "Dump data to  unit_test_git  End  2021-02-14 12:58:01.033232\n",
+      "Connection OK\n",
+      "Start delete old data at 2021-02-14 12:58:01.075665\n",
+      "Delete Last ['col1', 'col2'] at 2021-02-14 12:58:01.078656\n",
+      "delete from unit_test_git where ([col1] in ('4.0', '5.0', '6.0', '7.0') OR [col1] IS NULL) and [col2] in ('3', '4', '5')\n",
+      "Dump data to  unit_test_git  End  2021-02-14 12:58:01.083644\n",
+      "Connection OK\n",
+      "Drop Existing Table at  2021-02-14 12:58:01.115581\n",
+      "Dump data to "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " unit_test_git  End  2021-02-14 12:58:01.127526\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 12 tests in 0.666s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.main.TestProgram at 0x20f8270d648>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class SQL_Test_class(unittest.TestCase):\n",
+    "    def setUp(self):\n",
+    "        self.sql = da_tran_SQL(sql_type = 'sqlite', \n",
+    "                    host_name = 'test.db', \n",
+    "                    database_name = '', \n",
+    "                    user = '', \n",
+    "                    password = '' )\n",
+    "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
+    "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
+    "        self.table_name = 'unit_test_git'\n",
+    "        self.df1.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        \n",
+    "    def test_read_sql(self):\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_whole(self):\n",
+    "        self.sql.dump_whole(self.df2, self.table_name)\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df2\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    \n",
+    "    def test_replace1(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace1_str(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = 'col1')\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace2(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,4,5,6,7,8] , 'col2' : [1,1,2,2,3,3,4,4,5] , 'col3' : [1,1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace3(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace_logic(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'],\n",
+    "                             math_logic = {'col1' : {'logic' : '>', 'value' : 1}})\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1[self.df1['col1'] <= 1].append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace3(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_new1_str(self) :\n",
+    "        self.sql.dump_new(df_in = self.df2 , table_name_in = self.table_name, list_key = 'col1')\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,2,3,4,4,5] , 'col3' : [1,1,1,1,1,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_new1(self) :\n",
+    "        self.sql.dump_new(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,2,3,4,4,5] , 'col3' : [1,1,1,1,1,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_new2(self) :\n",
+    "        self.sql.dump_new(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2'], debug = False)\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,4,6,7,8] , 'col2' : [1,1,2,2,3,3,4,4,5] , 'col3' : [1,1,1,1,1,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace_null1(self) :\n",
+    "        df1_n = pd.DataFrame({'col1' : [1,None,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
+    "        df2_n = pd.DataFrame({'col1' : [4,5,6,7,None] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
+    "        df1_n.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        self.sql.dump_replace(df_in = df2_n , table_name_in = self.table_name, list_key = ['col1'] , debug = True)\n",
+    "        df_read = self.sql.read(self.table_name).sort_values('col1').reset_index(drop = True)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,3,4,5,6,7,None] , 'col2' : [1,2,3,3,4,4,5] , 'col3' : [1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read.fillna(99), expect_df.fillna(99))\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace_null2(self) :\n",
+    "        df1_n = pd.DataFrame({'col1' : [1,None,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
+    "        df2_n = pd.DataFrame({'col1' : [4,5,6,7,None] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
+    "        df1_n.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        self.sql.dump_replace(df_in = df2_n , table_name_in = self.table_name, list_key = ['col1','col2'] , debug = True)\n",
+    "        df_read = self.sql.read(self.table_name).sort_values('col1').reset_index(drop = True)\n",
+    "        expect_df = pd.DataFrame({ 'col1' : [1,None,3,4,4,5,6,7,None] , 'col2' : [1,1,2,2,3,3,4,4,5] \n",
+    "                                  ,'col3' : [1,1,1,1,2,2,2,2,2]}).sort_values('col1').reset_index(drop = True)\n",
+    "\n",
+    "        result, expect = help_test(df_read.fillna(99), expect_df.fillna(99))\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
     "unittest.main(argv = ['first-arg-is-ignored'], exit = False)"
    ]
   }
