Add sample of ODBC and SQLite

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -149,6 +149,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**from version >= 0.2.2**<br>\n",
+    "You can add more parameter in class by passing to parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection OK\n",
+      "Engine(mssql+pyodbc://e2eadmin:***@cemt-bsdb02.cementhai.com:1433/OPME2E?driver=SQL Server)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mssql = da_tran_SQL(sql_type = set_mssql['type'],\n",
+    "                host_name = set_mssql['host'],\n",
+    "                database_name = set_mssql['database'],\n",
+    "                user = set_mssql['user'],\n",
+    "                password = set_mssql['password'],\n",
+    "                port = '1433',\n",
+    "                driver = 'pyodbc', \n",
+    "                parameter = 'driver=SQL+Server')\n",
+    "print(mssql.engine)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**from version >= 0.1.9**<br>\n",
     "You could fine tune insert's speed by adjust these parameters into the da_tran_SQL class :\n",
     "- chunksize, chunksize parameter in pandas' to_sql method (Default Value 150)\n",
@@ -159,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +311,7 @@
        "4     5     3 2020-10-14     1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2577,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2602,7 +2636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2625,16 +2659,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Same as SQL Server, For MySQL the <b>sql_type must == \"MYSQL\" (ignore case sensitive)</b>\n",
+    "Same as SQL Server, For PostGreSQL the <b>sql_type must == \"POSTGRESQL\" (ignore case sensitive)</b>\n",
     "<br><br>\n",
-    "by Default, the class will using pymysql as driver and port 3306\n",
+    "by Default, the class will using pymysql as driver and port 5432\n",
     "<br><br>\n",
     "But you could also change them if you want like below"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2661,6 +2695,49 @@
    "source": [
     "<b>Every Method and Function are the same as SQL Server.<br>\n",
     "Except PostGreSQL still can't use Store Procedure or Function yet</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SQLite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "sqlite = da_tran_SQL(sql_type = 'sqlite', \n",
+    "                    host_name = 'test.db', \n",
+    "                    database_name = '', \n",
+    "                    user = '', \n",
+    "                    password = '' )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same as SQL Server, For SQLite the sql_type must == \"SQLITE\" (ignore case sensitive)\n",
+    "\n",
+    "by Default, the class will using sqlite as driver\n",
+    " - host_name for SQLite is the path to your .db file\n",
+    " - database_name, user and password will not be read if you didn't address special driver\n",
+    " - chunksize for SQLite will reduce to 50 because of SQLite's limit\n",
+    "\n",
+    "Every Method and Function are the same as SQL Server.<br>\n",
+    "**Don't forget that SQLite don't have Store Procedure or Datetime Type**"
    ]
   },
   {
