simplified sample files

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -4,41 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# For my Safety reason, load setting file from tests folder"
+    "# For my Safety reason, load setting file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First Directory at : \\01_DEV_Function\\Shared_Function\\samples\n",
-      "Change to : \\01_DEV_Function\\Shared_Function\\tests\n",
-      "Load Setting OK\n",
-      "Change back to : \\01_DEV_Function\\Shared_Function\\samples\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, re,json\n",
     "import pandas as pd\n",
     "\n",
-    "first_wd = os.getcwd()\n",
-    "print('First Directory at :', os.getcwd()[2:])\n",
-    "\n",
-    "os.chdir(re.sub(os.getcwd().split('\\\\')[-1]+'$','',os.getcwd()) + 'tests')\n",
-    "print('Change to :', os.getcwd()[2:])\n",
-    "#Load Setting File\n",
     "with open('setting.txt','r') as f:\n",
-    "    setting = json.load(f)\n",
-    "print('Load Setting OK') \n",
-    "\n",
-    "os.chdir(first_wd)\n",
-    "print('Change back to :', os.getcwd()[2:])"
+    "    setting = json.load(f)"
    ]
   },
   {
