--- a/samples/email_sender.ipynb
+++ b/samples/email_sender.ipynb
@@ -4,49 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# For my Safety reason, load setting file from tests folder"
+    "# For my Safety reason, load setting file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First Directory at : \\01_DEV_Function\\Shared_Function\\samples\n",
-      "Change to : \\01_DEV_Function\\Shared_Function\\tests\n",
-      "Load Setting OK\n",
-      "Change back to : \\01_DEV_Function\\Shared_Function\\samples\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, re,json, imp\n",
     "import pandas as pd\n",
     "\n",
-    "local_library = True\n",
-    "#local_library = False\n",
-    "\n",
-    "first_wd = os.getcwd()\n",
-    "print('First Directory at :', os.getcwd()[2:])\n",
-    "\n",
-    "os.chdir(re.sub(os.getcwd().split('\\\\')[-1]+'$','',os.getcwd()) + 'tests')\n",
-    "print('Change to :', os.getcwd()[2:])\n",
-    "#Load Setting File\n",
     "with open('setting.txt','r') as f:\n",
-    "    setting = json.load(f)\n",
-    "print('Load Setting OK') \n",
-    "\n",
-    "os.chdir(first_wd)\n",
-    "print('Change back to :', os.getcwd()[2:])"
+    "    setting = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +31,7 @@
        "dict_keys(['user', 'password', 'to', 'server', 'file_path_1', 'file_path_2'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,29 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Change Directory into : \\01_DEV_Function\\Shared_Function\n",
-      "Change back to : \\01_DEV_Function\\Shared_Function\\samples\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.chdir(re.sub(os.getcwd().split('\\\\')[-1]+'$','',os.getcwd()))\n",
-    "print('Change Directory into :', os.getcwd()[2:])\n",
-    "\n",
-    "if local_library : \n",
-    "    email_sender = imp.load_source('email_sender', 'py_topping/general_use/__init__.py').email_sender\n",
-    "else :\n",
-    "    from py_topping.general_use import email_sender\n",
-    "    \n",
-    "os.chdir(first_wd)\n",
-    "print('Change back to :', os.getcwd()[2:])"
+    "from py_topping.general_use import email_sender"
    ]
   },
   {
