Fix Sample for lazy_dnn

--- a/samples/lazy_ml.ipynb
+++ b/samples/lazy_ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "serious-harvard",
+   "id": "sunrise-timber",
    "metadata": {},
    "source": [
     "# Disable Tensorflow Warning"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "treated-memorial",
+   "id": "latin-description",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "committed-dispute",
+   "id": "monthly-messaging",
    "metadata": {},
    "source": [
     "# Import Function"
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "enclosed-washer",
+   "id": "opposite-sport",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "horizontal-pacific",
+   "id": "innovative-burke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "processed-cheat",
+   "id": "available-cooperative",
    "metadata": {},
    "source": [
     "### List of Parameter\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "current-newcastle",
+   "id": "meaningful-permission",
    "metadata": {},
    "source": [
     "# Sample DataFrame"
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "sophisticated-tobago",
+   "id": "severe-syndicate",
    "metadata": {},
    "outputs": [
     {
@@ -202,19 +202,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "earlier-bulgarian",
+   "id": "operational-tuition",
    "metadata": {},
    "source": [
     "# Training Phase\n",
     "\n",
     "\n",
-    "1. Basic Train With 1 numeric Feature"
+    "### Basic Train With 1 numeric Feature"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "agreed-polish",
+   "id": "pretty-beaver",
    "metadata": {},
    "outputs": [
     {
@@ -252,16 +252,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accessory-andorra",
+   "id": "accredited-crossing",
    "metadata": {},
    "source": [
-    "2. Basic Train With 1 numeric Feature and 1 categorical Feature"
+    "### Basic Train With 1 numeric Feature and 1 categorical Feature"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "animal-sherman",
+   "id": "least-claim",
    "metadata": {},
    "outputs": [
     {
@@ -300,16 +300,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "necessary-optimum",
+   "id": "present-alarm",
    "metadata": {},
    "source": [
-    "3. Basic Train With 2 numeric Feature and 1 categorical Feature"
+    "### Basic Train With 2 numeric Feature and 1 categorical Feature"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "hourly-lawyer",
+   "id": "clinical-spider",
    "metadata": {},
    "outputs": [
     {
@@ -348,16 +348,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dominant-titanium",
+   "id": "charitable-weekly",
    "metadata": {},
    "source": [
-    "4. Show Model Summary and Curve"
+    "### Show Model Summary and Curve"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "isolated-princeton",
+   "id": "married-vintage",
    "metadata": {},
    "outputs": [
     {
@@ -446,16 +446,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pursuant-berlin",
+   "id": "capital-twelve",
    "metadata": {},
    "source": [
-    "5. Training With Validate Data Set"
+    "### Training With Validate Data Set"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "functional-worker",
+   "id": "infectious-patrol",
    "metadata": {},
    "outputs": [
     {
@@ -544,16 +544,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "armed-overall",
+   "id": "changed-poultry",
    "metadata": {},
    "source": [
-    "6. Modify Neural Network and Iteration"
+    "### Modify Neural Network and Iteration"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "modern-sacramento",
+   "id": "desirable-centre",
    "metadata": {
     "scrolled": false
    },
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patent-thursday",
+   "id": "ethical-johns",
    "metadata": {},
    "source": [
     "# Prediction Phase"
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "mighty-bracket",
+   "id": "owned-comparative",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "parliamentary-sherman",
+   "id": "martial-folks",
    "metadata": {},
    "outputs": [
     {
