samples > lazy_LINE for notification and picture

--- a/samples/lazy_LINE.ipynb
+++ b/samples/lazy_LINE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "automated-material",
+   "id": "elect-ocean",
    "metadata": {},
    "source": [
     "Line Notify allow you to send message to Line group with API<br>\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "extended-landing",
+   "id": "outside-vertex",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fabulous-princeton",
+   "id": "chronic-bristol",
    "metadata": {},
    "source": [
     "## Initial with Token"
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "driven-danger",
+   "id": "relative-knowing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decent-thumbnail",
+   "id": "posted-cookbook",
    "metadata": {},
    "source": [
     "## More about Line Notify in these links"
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "expressed-frequency",
+   "id": "respected-animation",
    "metadata": {},
    "outputs": [
     {
@@ -67,16 +67,49 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hybrid-injury",
+   "id": "facial-beatles",
    "metadata": {},
    "source": [
-    "## Send Simple Message"
+    "## Send Method"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "distributed-polls",
+   "id": "dynamic-punch",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line.send(message, notification = True , stickerPackageId = '', stickerId = '', picture = '')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "personal-temple",
+   "metadata": {},
+   "source": [
+    "### List of Parameter\n",
+    " - **message** : Message to Send in Line (String)\n",
+    " - **notification** : To Notify or Not (Boolean)\n",
+    " - **stickerPackageId** : List of Columns' name for numeric feature (String)\n",
+    " - **stickerId**  : List of Columns' name for categorical feature (String)\n",
+    " - **picture** : List of Neural Network Node and Layer (String)\n",
+    "\n",
+    "**Return** : requests class (will Send LINE Message to LINE Group)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "exotic-albany",
+   "metadata": {},
+   "source": [
+    "## Sample of Send Simple Message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "facial-locator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,22 +118,82 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bacterial-emperor",
+   "id": "aware-commons",
    "metadata": {},
    "source": [
-    "## Send Message with Sticker"
+    "## Sample of Send Message with Sticker"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subject-venice",
+   "id": "limiting-conference",
    "metadata": {},
    "outputs": [],
    "source": [
     "line.send('Simple Message'\n",
     "          , stickerPackageId = 'PackageID for Sticker List'\n",
     "          , stickerId = 'StickerId for Sticker List')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "palestinian-relations",
+   "metadata": {},
+   "source": [
+    "## Sample of Send Message with Picture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "exceptional-cabin",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line.send('Simple Message'\n",
+    "          , picture = 'Path to your picture')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "legislative-aberdeen",
+   "metadata": {},
+   "source": [
+    "## Sample of Send Message without Notification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "historical-impossible",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line.send('Simple Message'\n",
+    "          , notification = False) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "governmental-shame",
+   "metadata": {},
+   "source": [
+    "## Combine All"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "charitable-metallic",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line.send('Simple Message'\n",
+    "          , notification = False \n",
+    "          , stickerPackageId = 'PackageID for Sticker List'\n",
+    "          , stickerId = 'StickerId for Sticker List'\n",
+    "          , picture = 'Path to your picture')"
    ]
   }
  ],
