samples > database > Add warning for BigQuery

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -2721,7 +2721,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Every Method and Function are the same as SQL Server.</b>"
+    "<b>Every Method and Function are the same as SQL Server.</b>\n",
+    "\n",
+    "Because BigQuery not automated data type for us like other SQL<br>\n",
+    "<font color='red'>SUGGEST TO **USE KEY COLUMNS TYPE AS GOOD FORMATTING TEXT BEFORE DUMP**</font>"
    ]
   },
   {
