samples > database > remove color

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -649,7 +649,7 @@
     "\n",
     "You could replace whole table with new dataframe with is method\n",
     "\n",
-    "<font color='red'>Becareful with Columns' Type, I'm suggest to fix columns' type before using this method </font>"
+    "**Becareful with Columns' Type, I'm suggest to fix columns' type before using this method**"
    ]
   },
   {
@@ -2724,7 +2724,7 @@
     "<b>Every Method and Function are the same as SQL Server.</b>\n",
     "\n",
     "Because BigQuery not automated data type for us like other SQL<br>\n",
-    "<font color='red'>SUGGEST TO **USE KEY COLUMNS TYPE AS GOOD FORMATTING TEXT BEFORE DUMP**</font>"
+    "SUGGEST TO **USE KEY COLUMNS TYPE AS GOOD FORMATTING TEXT BEFORE DUMP**"
    ]
   },
   {
