samples > database > add list of required libraries

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -1,6 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Required Libraries\n",
+    "<br> \n",
+    "**Standard Process** <br>\n",
+    " - ```pip install pandas```<br>\n",
+    " - ```pip install sqlalchemy```<br> \n",
+    " \n",
+    "**Parallel Process** (Not Recommended) <br>\n",
+    " - ```pip install dask```<br>\n",
+    " - ```pip install toolz```<br>\n",
+    " \n",
+    "**SQL Server Driver** <br>\n",
+    " - ```pip install pymssql```\n",
+    " - or ```pip install pyodbc```<br>\n",
+    " \n",
+    "**MySQL Driver** <br>\n",
+    " - ```pip install pymysql```<br>\n",
+    " \n",
+    "**Google's BigQuery Driver** <br>\n",
+    " - ```pip install google-cloud-bigquery```<br>\n",
+    " - ```pip install google-cloud-bigquery-storage```<br>\n",
+    " - ```pip install pybigquery```<br>\n",
+    " - ```pip install pandas-gbq```<br>\n",
+    " \n",
+    "**PostGreSQL Driver** <br>\n",
+    " - ```pip install psycopg2```<br>\n",
+    " \n",
+    "**SQLite Driver** <br>\n",
+    " - I'm already forgot =_=\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
