Sample > Update check_utc sample

--- a/samples/other_function.ipynb
+++ b/samples/other_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "twelve-aberdeen",
+   "id": "champion-popularity",
    "metadata": {},
    "source": [
     "# This Notebook is for small functions\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "quiet-animal",
+   "id": "earned-career",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sublime-photograph",
+   "id": "unavailable-grocery",
    "metadata": {},
    "source": [
     "## log_csv\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "awful-technician",
+   "id": "consecutive-rouge",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supported-wireless",
+   "id": "demographic-arthritis",
    "metadata": {},
    "source": [
     "## check_port\n",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "running-tracker",
+   "id": "injured-miller",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suited-respect",
+   "id": "pursuant-dietary",
    "metadata": {},
    "source": [
     "You can also leave the parameter for manual input"
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "median-bunch",
+   "id": "surrounded-chaos",
    "metadata": {},
    "outputs": [
     {
@@ -148,6 +148,38 @@
    ],
    "source": [
     "check_port()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "excessive-invention",
+   "metadata": {},
+   "source": [
+    "## check_utc\n",
+    "Just return Diff hour of (Desired Timezone) - (environment's time)<br>\n",
+    "Owner's test environment is in UTC+7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "smart-rendering",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-7"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from py_topping.general_use import check_utc\n",
+    "check_utc(0)"
    ]
   }
  ],
